<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#632E2E"
    android:backgroundTint="#DDFFFC"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context="com.example.customermanagement.CustomerManagement">

    <GridLayout
        android:id="@+id/gridLayoutBtns"
        android:layout_width="380dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <!-- Button to add nwe -->
        <Button
            android:id="@+id/btnAddNew"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:backgroundTint="#02655C"
            android:text="@string/add_new"
            android:textAllCaps="false"
            android:layout_margin="10dp"
            android:textColor="#F1FFFE"
            android:textSize="20sp" />

        <!-- Button to update by id -->
        <Button
            android:id="@+id/btnUpdateCustomer"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#02655C"
            android:text="@string/update_by_id"
            android:textAllCaps="false"
            android:textColor="#F1FFFE"
            android:textSize="20sp" />

        <!-- Button to delete by id -->
        <Button
            android:id="@+id/btnDeleteCustomer"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="center"
            android:backgroundTint="#02655C"
            android:text="@string/delete_by_id"
            android:textAllCaps="false"
            android:textColor="#F1FFFE"
            android:textSize="20sp" />

        <!-- Button to search by id -->
        <Button
            android:id="@+id/btnSearch"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#02655C"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="#F1FFFE"
            android:textSize="20sp" />

        <!-- Button to display all customers -->
        <Button
            android:id="@+id/btnDisplay"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#02655C"
            android:layout_column="0"
            android:text="@string/display"
            android:layout_row="3"
            android:textAllCaps="false"
            android:textColor="#F1FFFE"
            android:textSize="20sp" />

        <!-- Button to reset DB -->
        <Button
            android:id="@+id/btnResetDB"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#044C46"
            android:text="@string/reset_database"
            android:textColor="#F86156"
            android:layout_row="3"
            android:layout_margin="10dp"
            android:textSize="20sp" />

    </GridLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <!-- Text view: Id, Name, Email, Mobile -->
    <TextView
        android:id="@+id/tvCustomerRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:text="@string/customers_n"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp" />
    </ScrollView>
</LinearLayout>